# URThrow

./: .gitignore  NewGripperTimings  README.md  TestData  findCoordinates.cpp  main.cpp  speedJAnalysis.csv  speedJAnalysisLeastRestrictive.csv  timingFunc.txt
ConstantTimeThrow/: main.cpp
DifferentTimeBasedThrow/: CMakeLists.txt
GripperTest/: CMakeLists.txt  main.cpp
ThrowBacktrack/: main.cpp
ThrowBasedOnDistance/: CMakeLists.txt  main.cpp
URAccurasyTest/: CMakeLists.txt  main.cpp
URAccurasyTest SVD/: CMakeLists.txt  main.cpp
URBasicThrow/: CMakeLists.txt  main.cpp
URTest1/: CMakeLists.txt  CMakeLists.txt.user.297d826  main.cpp
URThrowRotational/: CMakeLists.txt  main.cpp
URThrowSpeedJTest/: CMakeLists.txt  main.cpp  ur5.cpp
URThrowV1/: CMakeLists.txt  cameraFunctions.cpp  main.cpp  ur5.cpp  ur5.h
URVisionIntegration/: CMakeLists.txt  cameraFunctions.cpp  cameraFunctions.h  main.cpp  ur5.cpp  ur5.h
WorkingThrow(1m_per_s)1/: CMakeLists.txt  main.cpp
calibration2/: CMakeLists.txt  main.cpp
findCoordinates/: CMakeLists.txt  Source.cpp  cameraFunctions.cpp  cameraFunctions.h  findCoordinates.cpp
